# hl-api

./: .env.example  .gitignore  .ruff.toml  README.md  TODO.md  pyproject.toml
.github/workflows/: ci.yml  e2e.yml
examples/: 01_place_and_cancel_order.py  02_get_market_price.py  03_market_order.py  04_usd_transfers.py  05_evm_usd_class_transfers.py  06_evm_place_and_cancel_order.py  07_evm_market_orders.py  08_evm_cctp_roundtrip.py  09_evm_core_deposit_withdraw.py  basic_usage.py  example_verification_blob.json  get_market_price.py  market_order.py  usd_transfers.py  vault_management.py
examples/blobs/: example_verification_blob.json
src/hl_api/: __init__.py  abi.py  base.py  constants.py  core.py  evm.py  evm_utils.py  exceptions.py  types.py  utils.py
src/hl_api/core/: __init__.py  client.py  config.py  connections.py
src/hl_api/evm/: __init__.py  bridge.py  client.py  config.py  connections.py  metadata.py  proofs.py  transactions.py
src/hl_api/utils/: __init__.py  core.py  evm.py  token_metadata.py
src/hyperliquid_unified/: base.py  core.py  evm.py  exceptions.py  utils.py
tests/: __init__.py  test_cctp_bridge.py  test_flexible_vault.py  test_limit_order_price_formatting.py  test_market_order_precision.py  test_price_formatting.py  test_types.py  test_utils.py
