[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hl-api"
version = "0.1.0"
description = "Unified Python API for HyperLiquid Core and EVM"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "timbrinded"}]
keywords = ["hyperliquid", "defi", "trading", "blockchain", "crypto"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]

dependencies = [
    "hyperliquid-python-sdk>=0.18.0",
    "python-dotenv>=1.0.1",
    "eth-account>=0.10.0",
    "dotenv>=0.9.9",
    "ruff>=0.12.11",
    "web3>=7.13.0",
    "pyrefly>=0.31.0",
    "pytest>=8.4.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "mypy>=1.0",
    "ruff>=0.1"
]

[project.urls]
Homepage = "https://github.com/Moonsong-Labs/hl-api"
Repository = "https://github.com/Moonsong-Labs/hl-api.git"
Issues = "https://github.com/Moonsong-Labs/hl-api/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "N", "W"]

[tool.pyrefly]
project-includes = ["src","tests"]
search-path = ["src", "tests"]
python-version = "3.10.0"
ignore-missing-imports = [
    "hyperliquid",
    "hyperliquid.*",
    "eth_account",
    "eth_account.*",
    "web3",
    "web3.*",
    "dotenv",
]
